rag-service_feature：重构会话记忆与偏好增量更新
1.将摘要、水位消息和会话偏好收敛到 conversation 单行状态，使用短锁与 CAS 防止异步覆盖

2.复用问题改写调用提取本轮约束和持续偏好，上下文不足时按摘要水位线扩展历史并引导补充

3.调整 Prompt 组装与流式消息落库时机，保留原始问题语义并异步执行摘要压缩

4.补充 UTF-8 中文核心流程注释及记忆、偏好和改写测试，同时排除本地 memo、计划、数据与 SQL